--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,16 @@
 ---
-import '../styles/styles.css';
+import Layout from "../layouts/Layout.astro";
 
-import Layout from '../layouts/Layout.astro';
+import "../styles/styles.css";
+import "@fontsource/plus-jakarta-sans";
+
+import Header from "../components/Header";
+import Section from "../components/Section";
 ---
 
 <Layout title="Skilled e-Learning">
-	<main>
-		
-	</main>
+  <main>
+    <Header />
+		<Section />
+  </main>
 </Layout>
