Mobile footer and Hero section completed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,14 @@ import "../styles/styles.css";
 import "@fontsource/plus-jakarta-sans";
 
 import Header from "../components/Header";
-import Section from "../components/Section";
+import HeroSection from "../components/HeroSection";
+import Footer from "../components/Footer";
 ---
 
 <Layout title="Skilled e-Learning">
   <main>
     <Header />
-		<Section />
+    <HeroSection />
+    <Footer />
   </main>
 </Layout>
