mobile version completed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import "@fontsource/plus-jakarta-sans";
 
 import Header from "../components/Header";
 import HeroSection from "../components/HeroSection";
+import Content from "../components/Content";
 import Footer from "../components/Footer";
 ---
 
@@ -13,6 +14,7 @@ import Footer from "../components/Footer";
   <main>
     <Header />
     <HeroSection />
+    <Content />
     <Footer />
   </main>
 </Layout>
