--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -41,6 +41,47 @@ header {
   @apply w-full object-cover mt-[46px];
 }
 
+/* content */
+.content-section {
+  @apply bg-gradient-to-b from-gradient3-0 to-gradient3-1;
+}
+
+.content-container {
+  @apply flex flex-col gap-10 mx-4 mb-[80px];
+}
+
+.content-header {
+  @apply bg-gradient-to-b from-gradient1-0 to-gradient1-1 rounded-[10px] pt-6 pb-8 px-7;
+}
+
+.content-title {
+  @apply text-snow text-[1.5rem] leading-[2rem] font-extrabold;
+}
+
+.card-container {
+  @apply flex flex-col gap-10;
+}
+
+.card-body {
+  @apply relative bg-snow pl-4 pb-8 rounded-[10px];
+}
+
+.card-image {
+  @apply absolute -top-6
+}
+
+.card-title {
+  @apply text-yankee-blue text-[1.25rem] leading-[1.5625rem] font-extrabold mb-4 pt-14;
+}
+
+.card-details {
+  @apply text-roman-silver text-[1rem] leading-[1.625rem] font-medium mb-6;
+}
+
+.card-btn {
+  @apply text-sas-socks text-[1.125rem] leading-[1.75rem] font-bold;
+}
+
 /* footer */
 .footer-container {
   @apply bg-yankee-blue flex flex-row justify-between items-center py-9;
