--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -128,6 +128,7 @@ header {
 }
 
 /* section */
+/* this section not responding to changes */
 .section-container {
   @apply md:flex md:flex-col md:mt-[99px] md:ml-10 md:mr-0;;
 }
