--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -87,19 +87,15 @@ header {
 }
 
 .content-container {
-  @apply flex flex-col gap-10 mx-4 pb-[80px] md:flex-row md:flex-wrap md:mx-10;
+  @apply flex flex-col gap-10 mx-4 pb-[80px] md:grid md:grid-cols-2 md:mx-10;
 }
 
 .content-title {
-  @apply bg-gradient-to-b from-gradient1-0 to-gradient1-1 rounded-[10px] pt-6 pb-8 px-7 text-snow text-[1.5rem] leading-[2rem] font-extrabold md:h-[259px] md:w-1/2 md:pt-14;
+  @apply bg-gradient-to-b from-gradient1-0 to-gradient1-1 rounded-[10px] pt-6 pb-8 px-7 text-snow text-[1.5rem] leading-[2rem] font-extrabold md:h-[259px] md:pt-14;
 }
 
-/* .card-container {
-  @apply flex flex-col gap-10 md:w-1/2;
-} */
-
 .card-body {
-  @apply relative bg-snow pl-4 pb-8 rounded-[10px] md:w-1/2;
+  @apply relative bg-snow pl-4 pb-8 rounded-[10px];
 }
 
 .card-image {
