Working on desktop layout.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,12 +8,14 @@ import Header from "../components/Header";
 import HeroSection from "../components/HeroSection";
 import Content from "../components/Content";
 import Footer from "../components/Footer";
+import HeroImage from "../components/HeroImage";
 ---
 
 <Layout title="Skilled e-Learning">
   <main>
     <Header />
     <HeroSection />
+    <HeroImage />
     <Content />
     <Footer />
   </main>
